changed favicon.ico from react boiler plate to custom one

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <title>Janmar Jose D. Roque Jr. | Web Development Portfolio</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to view this website.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
